##
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = syapse-flask-jwt-consumer
version = 4.4.1
description = Used to support JWT handling in Syapse's flask apps. Forked from dmi3y/flask-jwt-consumer.
long_description = Used to support JWT handling in Syapse's flask apps. Forked from dmi3y/flask-jwt-consumer.
author = Syapse, Inc.
author_email = noreply@syapse.com
url = https://github.com/syapse/syapse-flask-jwt-consumer
license = Proprietary
classifiers =
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
  setuptools-scm
install_requires =
  flask==1.1.4
  pyjwt==2.5.0
  cryptography==38.0.1

[options.extras_require]
dev =
  lxml==4.9.1
  mypy==0.981
  pyjwt[crypto]==2.5.0
  pytest-cov==4.0.0
  pytest-faker==2.0.0
  pytest-mock==3.9.0
  pytest==7.1.3
  types-pytz==2022.2.1.0
  types-requests==2.28.11
  types-setuptools==65.3.0
  types-toml==0.10.8

[mypy]
ignore_missing_imports = true
error_summary = true
files = .
show_error_codes = true

[pep8]
# Code Climate respects a pep8 section
max_line_length = 100

[flake8]
max_line_length = 100

[options.entry_points]
console_scripts =
  syapse-flask-jwt-consumer = flask_jwt_consumer.cli:main
